Footer section added

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* -----------------------------
 Template Name: Template name
-Author: Authore Name
+Author: Author Name
 ------------------------------- */
 /* -----------------------------------
 CSS Table of content
