--- a/css/elements.css
+++ b/css/elements.css
@@ -177,7 +177,7 @@
 /* Slider */
 .slick-loading .slick-list
 {
-    background: #fff url('./ajax-loader.gif') center center no-repeat;
+    background: #fff url('../ima/icons/ajax-loader.gif') center center no-repeat;
 }
 /* Arrows */
 .slick-prev,
