--- a/css/elements.css
+++ b/css/elements.css
@@ -2,7 +2,7 @@
 
 /* ----------------------
 1. Bootstrap v4.0.0-beta
-2. bicon v1.0.0 
+2. Bicon v1.0.0 
 3. Fontawesome
 4. Animate
 ------------------------*/
@@ -16,7 +16,7 @@
 /*# sourceMappingURL=bootstrap.min.css.map */
 
 /**
- * bicon v1.0.0 
+ * Bicon v1.0.0 
  * @link 
  * @copyright 2016-2017 ThemeBucket
  * @license MIT
